# Compiler-Driven-Parallelism-in-Modern-Fortran-using-DO-CONCURRENT

./: CMakeLists.txt  ReadMe.md  fpm.toml
.github/workflows/: cmake-build.yml
app/: main_driver.f90
benchmark/intel/: benchmark_ifx_windows.txt
doc/: main.aux  main.out  main.tex
scripts/: linux_nvfortran_build.txt  read_binary_ch.py  windows_intel_build.txt
src/: core_utilities.f90  error_handler.f90  free_energy_kernel.f90  grid_generator.f90  grid_setup.f90  io_handlers.f90  laplacian_kernel.f90  microstructure_initializer.f90  performance_analyzer.f90  performance_evaluation.f90  performance_timer.f90  phase_field_core.f90  precisions_control.f90  simulation_config.f90  time_kernel.f90
tests/: file.txt
